enable flexslider "real" nav in order to avoid layout shifting enabled with: add_filter( 'woocommerce_single_product_nav_flexslider', '__return_true' );

--- a/plugins/woocommerce/legacy/css/woocommerce.scss
+++ b/plugins/woocommerce/legacy/css/woocommerce.scss
@@ -210,6 +210,20 @@ p.demo_store,
 				width: 20%;
 			}
 
+			&.woocommerce-product-gallery.woocommerce-product-gallery--custom-nav  {
+
+				.woocommerce-product-gallery__wrapper {
+					white-space: nowrap;
+					overflow: hidden;
+					line-height: 0;
+				}
+
+				.woocommerce-product-gallery__image {
+					width: 100%;
+					display: inline-block;
+				}
+			}
+
 			.woocommerce-product-gallery__trigger {
 				position: absolute;
 				top: 0.5em;
